--- a/Consent.htm
+++ b/Consent.htm
@@ -14,17 +14,16 @@
 		You may benefit by gaining a better understanding of psychological research. No other risks or benefits are anticipated.</p>
     <p style="font-size: 12pt"><b>Confidentiality.</b>
 		Any information obtained in this study will be kept strictly confidential and used solely for research purposes. We do not ask any identifying information and responses
-		will be kept completely anonymous.</p>
+		will be kept completely anonymous. Your anonymised data may be posted to a public repository for other researchers to make use of.</p>
     <p style="font-size: 12pt"><b>Compensation.</b>
         You will receive a sum of money for participating.</p>
 	<p style="font-size: 12pt"><b>Your Rights.</b>
         Your decision to participate in this research is voluntary. You can withdraw from the study at any time without penalty.
 		You do not have to answer any questions you do not want to.</p>
-		<p style="font-size: 12pt"><b>Contact Information.</b>
-        Your decision to participate in this research is voluntary. You can withdraw from the study at any time without penalty. You do not have to answer any questions you do not want to.</p>
-    <p style="font-size: 12pt">If you have any questions or issues with this study please contact the principle investigator (Sean Hughes) at sean.hughes@ugent.be who can review the matter and provide
-	further information. </p><br>
-	<p style="font-size: 12pt">>You must be 18 years of age or older to participate in this research study.</p>
+	<p style="font-size: 12pt"><b>Contact Information. </b>
+        If you have any questions or issues with this study please contact the principle investigator (Sean Hughes) at sean.hughes@ugent.be who can review the matter and provide
+        further information.
+	<p style="font-size: 12pt">You must be 18 years of age or older to participate in this research study.</p>
 	<p style="font-size: 12pt">Please indicate below whether you consent to participate in this research study:</p>
 	<li>
 		<ul>Yes, I consent to participate in this research study.</ul>
