consent form changes

--- a/Measures/Consent.htm
+++ b/Measures/Consent.htm
@@ -3,33 +3,31 @@
 <head>
     <title>Participant Consent Form</title>
 </head>
-<body style="font-family:Times New Roman; font-size:10pt; margin:10%">
-
-        <p style="font-size: 14pt"><b>Project Title: LEARNING STUDY<br>Certificate of Informed Consent</b></p>
-
-    <p style="font-size: 12pt"><b>Overview and Procedures:</b>
-        The purpose of this study is to examine factors that influence human memory and cognition. During the study you will be asked to learn several things. Sometimes you will have to be ACCURATE. At other times you will have to QUICK and ACCURATE.</p>
-    <p style="font-size: 12pt"><b>Risk and Benefits.</b>
-		This study involves no more risk to your physical or psychological health beyond those encountered in the normal course of everyday life.
-		You may benefit by gaining a better understanding of psychological research. No other risks or benefits are anticipated.</p>
-    <p style="font-size: 12pt"><b>Confidentiality.</b>
-		Any information obtained in this study will be kept strictly confidential and used solely for research purposes. We do not ask any identifying information and responses
-		will be kept completely anonymous. Your anonymised data may be posted to a public repository for other researchers to make use of.</p>
-    <p style="font-size: 12pt"><b>Compensation.</b>
-        You will receive a sum of money for participating.</p>
-	<p style="font-size: 12pt"><b>Your Rights.</b>
-        Your decision to participate in this research is voluntary. You can withdraw from the study at any time without penalty.
-		You do not have to answer any questions you do not want to.</p>
-	<p style="font-size: 12pt"><b>Contact Information. </b>
-        If you have any questions or issues with this study please contact the principle investigator (Sean Hughes) at sean.hughes@ugent.be who can review the matter and provide
-        further information.
-	<p style="font-size: 12pt">You must be 18 years of age or older to participate in this research study.</p>
-	<p style="font-size: 12pt">Please indicate below whether you consent to participate in this research study:</p>
-	<li>
-		<ul>Yes, I consent to participate in this research study.</ul>
-		<ul>No, I do not consent to participate.</ul>
-	</li>
-	<p>Please let the experimenter know if you would like a copy of this form for your records.</p>
-
+<body style="font-family:Arial; font-size:12pt; margin:3%">
+    <p>
+        <b>Consent form</b><br><br>
+        <b>Overview</b><br>
+        The purpose of this study is to examine factors that influence learning and cognition. During the study you will be asked to complete several tasks, many of which involve nonsense words. Sometimes you will have to be ACCURATE. At other times you will have to QUICK and ACCURATE. Each task will inform you what your goal is before you start.
+        <br><br>
+        <b>Requirements</b><br>
+        In order to participate, this experiment requires you to:
+        <ul>
+            <li>Download the "inquisit player" web browser plugin. A link will be provided. This plugin is used in many online psychology experiments.</li>
+            <li>Be 18 years of age or older.</li>
+            <li>Have normal or correct-to-normal vision (e.g., wear glasses or contact lenses).</li>
+            <li>Have full use of both hands.</li>
+        </ul>
+        <b>Risk and Benefits</b><br>
+		This study involves no known risks to your wellbeing. You may benefit from greater insight into psychological research.
+        <br><br>
+        <b>Compensation</b><br>
+        You will receive a sum of money for participating, as detailed on the Prolific website.
+        <br><br>
+        <b>Confidentiality</b><br>
+        All data will be irrevocably anonimised as soon as data collection is completed. No personal identifying information is collected other than age and gender. All data will be used solely for research purposes. Your anonymised data may be posted to a public repository for other researchers to make use of.
+        <br><br>
+        <b>Your Rights</b><br>
+        Your decision to participate in this research is entirely voluntary. You can withdraw from the study at any time without penalty. You do not have to answer any questions you do not want to. IF NECESSARY, YOU CAN EXIT INQUISIT WEB PLAYER BEFORE THE EXPERIMENT IS COMPLETED BY PRESSING CTRL-C (WINDOWS) OR COMMAND-C (MAC) SEVERAL TIMES. If you have any questions or issues with this study please contact the principle investigator (Ian Hussey) at ian.hussey@ugent.be who can review the matter and provide further information.
+    </p>
 </body>
 </html>
