--- a/Measures/Consent.htm
+++ b/Measures/Consent.htm
@@ -12,10 +12,9 @@
         <b>Requirements</b><br>
         In order to participate, this experiment requires you to:
         <ul>
-            <li>Download the "inquisit player" web browser plugin. A link will be provided. This plugin is used in many online psychology experiments.</li>
-            <li>Be 18 years of age or older.</li>
-            <li>Have normal or correct-to-normal vision (e.g., wear glasses or contact lenses).</li>
-            <li>Have full use of both hands.</li>
+            <li>be 18 years of age or older.</li>
+            <li>have normal or correct-to-normal vision (e.g., wear glasses or contact lenses).</li>
+            <li>have full use of both hands.</li>
         </ul>
         <b>Risk and Benefits</b><br>
 		This study involves no known risks to your wellbeing. You may benefit from greater insight into psychological research.
