removed redundant item in consent form

--- a/Measures/Consent.htm
+++ b/Measures/Consent.htm
@@ -12,7 +12,6 @@
         <b>Requirements</b><br>
         In order to participate, this experiment requires you to:
         <ul>
-            <li>be 18 years of age or older.</li>
             <li>have normal or correct-to-normal vision (e.g., wear glasses or contact lenses).</li>
             <li>have full use of both hands.</li>
         </ul>
@@ -26,7 +25,7 @@
         All data will be irrevocably anonimised as soon as data collection is completed. No personal identifying information is collected other than age and gender. All data will be used solely for research purposes. Your anonymised data may be posted to a public repository for other researchers to make use of.
         <br><br>
         <b>Your Rights</b><br>
-        Your decision to participate in this research is entirely voluntary. You can withdraw from the study at any time without penalty. You do not have to answer any questions you do not want to. IF NECESSARY, YOU CAN EXIT INQUISIT WEB PLAYER BEFORE THE EXPERIMENT IS COMPLETED BY PRESSING CTRL-C (WINDOWS) OR COMMAND-C (MAC) SEVERAL TIMES. If you have any questions or issues with this study please contact the principle investigator (Ian Hussey) at ian.hussey@ugent.be who can review the matter and provide further information.
+        Your decision to participate in this research is entirely voluntary. You can withdraw from the study at any time without penalty. You do not have to answer any questions you do not want to. IF NECESSARY, YOU CAN EXIT INQUISIT WEB PLAYER BEFORE THE EXPERIMENT IS COMPLETED BY PRESSING CTRL-C (WINDOWS) OR COMMAND-C (MAC) SEVERAL TIMES. If you have any questions or issues with this study please contact the researcher, Ian Hussey, at ian.hussey@ugent.be who can review the matter and provide further information.
     </p>
 </body>
 </html>
